feat: authorize secure digital downloads
